--- a/packages/storybook-html/stories/layout/page-layouts/sidebar-right/sidebar-right.mdx
+++ b/packages/storybook-html/stories/layout/page-layouts/sidebar-right/sidebar-right.mdx
@@ -1,4 +1,4 @@
-import { Meta, Canvas } from "@storybook/blocks";
+import { Meta, Canvas, Source } from "@storybook/blocks";
 import StatusBadge from "../../../../.storybook/custom/components/StatusBadge";
 import * as SidebarRightStories from "./sidebar-right.stories";
 
@@ -23,25 +23,17 @@ Then implement the component as per the HTML example below.
 `.uq-section` elements are then used within `.uq-sidebar-right-layout__main` and `.uq-sidebar-right-layout__sidebar` to
 provide correct **section spacing**.
 
-<Canvas of={SidebarRightStories.SidebarRight} />
+<Canvas of={SidebarRightStories.SidebarRight} sourceState="none" />
 
-```html
-<div class="uq-container">
-  <div class="uq-sidebar-right-layout">
-    <div class="uq-sidebar-right-layout__main">
-      <div class="uq-section"></div>
-    </div>
-    <div class="uq-sidebar-right-layout__sidebar">
-      <div class="uq-section"></div>
-    </div>
-  </div>
-</div>
-```
+<Source of={SidebarRightStories.SidebarRight} />
 
 ### Examples
 
 #### Sidebar right layout with News cards.
 
 This example uses the `.uq-reduced-spacing` class for smaller gaps between sections and cards.
+
+Multiple main and sidebar elements can be used combined with the `.uq-sidebar-right-layout__first` and `.uq-sidebar-right-layout__second` to achieve
+complex mobile stack ordering whilst maintaining the desktop grid layout.
 
 <Canvas of={SidebarRightStories.NewsExample} />
