--- a/packages/storybook-html/stories/components/core/typography.mdx
+++ b/packages/storybook-html/stories/components/core/typography.mdx
@@ -51,14 +51,14 @@ Copy the HTML or CSS below and paste it into your project to load design system 
 <link
   rel="stylesheet"
   type="text/css"
-  href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Roboto:wght@300;400;500&display=swap"
+  href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Roboto:wght@400;500&display=swap"
 />
 ```
 
 **CSS**
 
 ```css
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Roboto:wght@300;400;500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Roboto:wght@400;500&display=swap");
 ```
 
 ### Font stacks
