chore: fix lint

--- a/packages/storybook-react/stories/Components/UqIcon/UqIcon.mdx
+++ b/packages/storybook-react/stories/Components/UqIcon/UqIcon.mdx
@@ -1,5 +1,5 @@
 import { Meta, Canvas, Controls, Source } from "@storybook/blocks";
-import * as UqIconStories  from "./UqIcon.stories";
+import * as UqIconStories from "./UqIcon.stories";
 
 <Meta of={UqIconStories} />
 
@@ -16,7 +16,7 @@ npm i @uqds/react
 ## Usage
 
 ```js
-import { UqIcon } from "@uqds/react"
+import { UqIcon } from "@uqds/react";
 ```
 
 <Canvas of={UqIconStories.UqIcon} sourceState="none" />
