[ITSADSSD-59700]: New pagination (#605)
* feat: updated pagination

BREAKING CHANGE: new pagination markup

* chore: fix lint, remove old files

* chore: update pagination features to match react implementation

* chore: add stories for pagination item to reduce markup

* chore: added screenshots

--- a/packages/storybook-html/stories/components/pagination/pagination.mdx
+++ b/packages/storybook-html/stories/components/pagination/pagination.mdx
@@ -1,50 +1,74 @@
 import { Meta, Story, Canvas } from "@storybook/blocks";
 import StatusBadge from "../../../.storybook/custom/components/StatusBadge";
 import * as PaginationStories from "./pagination.stories";
+import * as PaginationItemStories from "./paginationItem.stories";
 
 <Meta of={PaginationStories} />
 
 # Pagination
 
-<StatusBadge.Review />
+<StatusBadge.Stable />
 
-<StatusBadge.DraftDoc />
+<StatusBadge.StableDoc />
 
-Pagination, also known as paging, is the process of dividing a document into discrete pages, either electronic pages or printed pages.
+<a href="https://github.com/uq-its-ss/design-system/issues" target="_blank">
+  Check for open issues
+</a>
 
-## Pagination states
+## Overview
 
-The Pagination component used here has various states and has display variants based on which page it displays. For instance, if the component is displaying the first page of a series of pages, the links 'first' and 'prev' are removed.
-If the component is displaying the last page, the links 'last' and 'next' are removed. See the instances below and its html code.
+Pagination, also known as paging, is the process of dividing a document into discrete pages.
 
-### Pagination first
+### Default
 
-<Canvas of={PaginationStories.paginationFirst} />
+The default pager uses `<a>` tags.
 
-### Pagination middle
+<Canvas of={PaginationStories.Pagination} />
 
-<Canvas of={PaginationStories.paginationMiddle} />
+### With buttons
 
-### Pagination last
+Instead of `<a>` tags `<button>` tags can be used instead.
 
-<Canvas of={PaginationStories.paginationLast} />
+<Canvas of={PaginationStories.AsButtons} />
 
-#### The table below list's the classname's of the pagination component and what it does.
+## Usage
 
-| Classname                                              | Description                                                                           | Result                                                                                                                                  |
-| ------------------------------------------------------ | ------------------------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------- |
-| pagination                                             | Applied to the parent element                                                         | -                                                                                                                                       |
-| pagination\_\_item                                     | Applied to all the child elements except the ellipsis                                 | On clicked goes to the relevant page                                                                                                    |
-| pagination\_\_ellipsis                                 | Applied to the child element to denote there is more                                  | -                                                                                                                                       |
-| pagination\_\_ellipsis pagination\_\_ellipsis--left    | Applied to the child element to denote there is more to the left                      | -                                                                                                                                       |
-| pagination\_\_ellipsis pagination\_\_ellipsis--right   | Applied to the child element to denote there is more to the right                     | -                                                                                                                                       |
-| pagination\_\_item--go-first                           | Applied to the child element that takes you to the first page                         | On clicked goes to first page                                                                                                           |
-| pagination\_\_item--go-last                            | Applied to the child element that takes you to the last page                          | On clicked goes to last page                                                                                                            |
-| pagination\_\_item--go-previous                        | Applied to the child element that takes you to the previous page                      | On clicked goes to previous page                                                                                                        |
-| pagination\_\_item--go-next                            | Applied to the child element that takes you to the next page                          | On clicked goes to next page                                                                                                            |
-| pagination\_\_item--first                              | Applied to the child element that denotes the first page                              | -                                                                                                                                       |
-| pagination\_\_item--last                               | Applied to the child element that denotes the last page                               | -                                                                                                                                       |
-| pagination\_\_item--current                            | Applied to the child element that denotes the current page                            | -                                                                                                                                       |
-| pagination\_\_item--first, pagination\_\_item--current | Applied together to the child element that denotes the first page as the current page | Child elements with class 'pagination\_\_item--go-first', 'pagination\_\_item--go-previous', 'pagination\_\_ellipsis--left' are removed |
-| pagination\_\_item--last, pagination\_\_item--current  | Applied together to the child element that denotes the last page as the current page  | Child elements with class 'pagination\_\_item--go-last', 'pagination\_\_item--go-next', 'pagination\_\_ellipsis--right' are removed     |
-| pagination\_\_link                                     | Applied to the child element of the child element pagination\_\_item                  | -                                                                                                                                       |
+Pagination should adapt depending on the number of available pages.
+
+### 5 or less pages
+
+Buttons for all pages show.
+
+If on the first page, the Previous button does not show.
+
+<Canvas of={PaginationStories.PagesLessFirst} />
+
+If on the last page, the Next button does not show.
+
+<Canvas of={PaginationStories.PagesLessLast} />
+
+If on any other page, both Previous and Next buttons show.
+
+<Canvas of={PaginationStories.PagesLessMiddle} />
+
+### 6 or more pages
+
+Visible page buttons adapts depending on the current page.
+
+If on the first or second pages, the first 4 pages show. An ellipsis shows before the last page.
+
+Clicking the ellipsis shows the first invisible page.
+
+<Canvas of={PaginationStories.PagesMoreFirst} />
+
+If on the last or second last page, the last 4 pages show. An ellipsis shows before the first page.
+
+Clicking the ellipsis shows the next invisible page.
+
+<Canvas of={PaginationStories.PagesMoreLast} />
+
+If on any other page one less and one more pages show, with an ellipsis before the first and last pages.
+
+Clicking either ellipsis skips 3 pages forward or back from the current page.
+
+<Canvas of={PaginationStories.PagesMoreMiddle} />
