--- a/packages/storybook-email/stories/email-guidelines/email-guidelines.mdx
+++ b/packages/storybook-email/stories/email-guidelines/email-guidelines.mdx
@@ -2,9 +2,9 @@ import { Meta, Story, Canvas } from "@storybook/blocks";
 
 <Meta title="Email Guidelines/Template Guidelines" />
 
-# Email template guidelines 
+# Email template guidelines
 
-These guidelines help us ensure we maintain brand consistency and compliance in student email communications, preserving our brand’s strength and credibility while creating a cohesive experience for our students. 
+These guidelines help us ensure we maintain brand consistency and compliance in student email communications, preserving our brand’s strength and credibility while creating a cohesive experience for our students.
 
 ## styles
 
@@ -70,7 +70,7 @@ These styles define the look and feel of your email, including recommended fonts
         <strong>Link style on UQ purple background</strong>
         <ul>
             <li>Colour: #ffffff</li>
-        </ul>        
+        </ul>
       </td>
     </tr>
 
@@ -101,44 +101,60 @@ These styles define the look and feel of your email, including recommended fonts
                 <li>Font colour: #FFFFFF</li>
                 <li>Border colour: #FFFFFF</li>
             </ul>
-        </ul>       
+        </ul>
       </td>
     </tr>
 
   </tbody>
 </table>
 
+## Assets
 
-## Assets 
+These assets form the core layout of your email, including the header, footer, and other essential structural elements.
 
-These assets form the core layout of your email, including the header, footer, and other essential structural elements. 
-
-### Header 
+### Header
 
 <ul>
-    <li>Used across all UQ emails</li>
-    <li>Includes the UQ logo, linking to the UQ homepage</li>
-    <li>Includes a 'View in browser' link that opens the email in the user's browser for easier viewing</li>
-Used across all UQ emails. 
+  <li>Used across all UQ emails</li>
+  <li>Includes the UQ logo, linking to the UQ homepage</li>
+  <li>
+    Includes a 'View in browser' link that opens the email in the user's browser
+    for easier viewing
+  </li>
+  Used across all UQ emails.
 </ul>
 
-Includes the UQ logo, linking to the UQ homepage, and a 'View in browser' link that opens the email in the user's browser for easier viewing. 
+Includes the UQ logo, linking to the UQ homepage, and a 'View in browser' link that opens the email in the user's browser for easier viewing.
 
-### Sub-header 
+### Sub-header
 
 <ul>
-<li>Use this for faculty or school emails to display the faculty or school name. </li>
+  <li>
+    Use this for faculty or school emails to display the faculty or school name.{" "}
+  </li>
 </ul>
 
-### Hero image 
+### Hero image
 
 <ul>
-    <li>Optional - use only if it adds value, enhances engagement, or supports the email's purpose. </li>
-    <li>Avoid using the UQ graphic device (purple wave graphic that aligns flush with the bottom edge of the hero image) </li>
-    <li>Image sizing </li>
-    <ul>
-        <li>Large hero images are standard for Salesforce emails and can also be used in Oracle/Vision6 when appropriate.</li>
-        <li>Small hero image is recommended for Oracle/Vision 6.  
-Include example of mobile display in guidelines to demonstrate different size displays for each image size. </li>
-    </ul>
+  <li>
+    Optional - use only if it adds value, enhances engagement, or supports the
+    email's purpose.{" "}
+  </li>
+  <li>
+    Avoid using the UQ graphic device (purple wave graphic that aligns flush
+    with the bottom edge of the hero image){" "}
+  </li>
+  <li>Image sizing </li>
+  <ul>
+    <li>
+      Large hero images are standard for Salesforce emails and can also be used
+      in Oracle/Vision6 when appropriate.
+    </li>
+    <li>
+      Small hero image is recommended for Oracle/Vision 6. Include example of
+      mobile display in guidelines to demonstrate different size displays for
+      each image size.{" "}
+    </li>
+  </ul>
 </ul>
