--- a/packages/storybook-email/stories/email-templates/salesforce/salesforce.mdx
+++ b/packages/storybook-email/stories/email-templates/salesforce/salesforce.mdx
@@ -1,5 +1,5 @@
 import { Meta, Story, Canvas } from "@storybook/blocks";
-import { Source } from '@storybook/addon-docs';
+import { Source } from "@storybook/addon-docs";
 import * as SalesforceStories from "./salesforce.stories";
 
 <Meta of={SalesforceStories} />
@@ -34,7 +34,9 @@ It must not be a descendant of other `.uq-container` elements or elements that u
   code={`
 
 <!doctypehtml><html lang=en xml:lang=en xmlns=http://www.w3.org/1999/xhtml xmlns:o=urn:schemas-microsoft-com:office:office xmlns:v=urn:schemas-microsoft-com:vml><meta content="noindex, nofollow"
+
 name=robots><meta content=no-referrer name=referrer><!--[if gte mso 9]><xml><o:officedocumentsettings><o:allowpng><o:pixelsperinch>96</o:pixelsperinch></o:officedocumentsettings></xml><![endif]-->
+
 <meta content="text/html; charset=utf-8"http-equiv=Content-type><meta content="width=device-width,initial-scale=1,maximum-scale=1"name=viewport><meta content="IE=edge"http-equiv=X-UA-Compatible><meta 
 content="date=no"name=format-detection><meta content="address=no"name=format-detection><meta content="telephone=no"name=format-detection><meta name=x-apple-disable-message-reformatting><meta 
 content="light dark"name=color-scheme><meta content="light dark"name=supported-color-schemes><title>The University of Queensland</title>
@@ -440,7 +442,7 @@ href="http://click.explore-test.uq.edu.au/?qs=bf7df03b97f962a7f3eb0abc174c200fcd
 data-linkto=other title="Opt out or manage your subscriptions"target=_blank class=link style=color:#51247a;text-decoration:underline;font-weight:400>Unsubscribe</a> from {mailing list name}</table>
 </table></table></table></table></center>
 
-  `}
+`}
 />
 
 ```html
