--- a/packages/storybook-html/stories/components/core/typography.mdx
+++ b/packages/storybook-html/stories/components/core/typography.mdx
@@ -11,7 +11,7 @@ The following table provides examples and style values of common HTML elements. 
 
 ### Element examples
 
-<Canvas of={TypographyExample.Example} />
+<Story of={TypographyExample.Example} />
 
 ### Loading fonts
 
