--- a/packages/storybook-html/stories/components/core/typography.mdx
+++ b/packages/storybook-html/stories/components/core/typography.mdx
@@ -1,51 +1,23 @@
 import { Meta, Story, Canvas, Preview } from "@storybook/blocks";
-import "./_typography.scss";
+import * as TypographyExample from "./typography-example.stories";
 
 <Meta title="Core/Typography" />
 
 # Typography
 
-## Fonts
+**Roboto** and **Montserrat** are the primary fonts used across UQ's online applications.
 
-The following fonts are used for UQ online applications:
+The following table provides examples and style values of common HTML elements. NOTE: Individual components may override these values.
 
-<table className="uqds-table uqds-table--card uqds-fonts">
-  <thead>
-    <tr>
-      <th>Font</th>
-      <th>Styles</th>
-      <th>Usage</th>
-    </tr>
-  </thead>
+### Element examples
 
-  <tbody>
-    <tr>
-      <td><div class="uqds-font uqds-font--roboto">Roboto</div></td>
-
-      <td>
-        <div class="uqds-font uqds-font--roboto">Regular (400)</div>
-        <div class="uqds-font uqds-font--roboto uqds-font--italic">Regular (400) italic</div>
-        <div class="uqds-font uqds-font--roboto uqds-font--500">Medium (500)</div>
-        <div class="uqds-font uqds-font--roboto uqds-font--500 uqds-font--italic">Medium (500) italic</div>
-      </td>
-
-      <td>For headings and paragraph text</td>
-    </tr>
-
-    <tr>
-      <td><div class="uqds-font uqds-font--montserrat uqds-font--500">Montserrat</div></td>
-      <td><div class="uqds-font uqds-font--montserrat uqds-font--500">Medium (500)</div></td>
-      <td>For the main page heading</td>
-    </tr>
-
-  </tbody>
-</table>
+<Story of={TypographyExample.Example} />
 
 ### Loading fonts
 
-Copy the HTML or CSS below and paste it into your project to load design system fonts.
+Use the HTML or CSS below to load the Roboto and Montserrat fonts.
 
-**HTML**
+HTML
 
 ```html
 <link
@@ -55,13 +27,13 @@ Copy the HTML or CSS below and paste it into your project to load design system 
 />
 ```
 
-**CSS**
+CSS
 
 ```css
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Roboto:wght@300;400;500&display=swap");
 ```
 
-### Font stacks
+### Font family stacks
 
 The following font family declarations use widely available fonts. A user's web browser will look at the comma-separated list and will
 attempt to use each font in turn until it finds one that is available on the user's computer. The final "generic" font (sans-serif or serif) hints at what type of font to use if the web browser doesn't
@@ -81,7 +53,7 @@ font-family: Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
 
 ### Fallback fonts
 
-When platforms and systems such as third party applications are not able to display our fonts, use fallback fonts. If none of the alternative font options are available, it is recommended to use the default font provided by the platform or system.
+When platforms and systems such as third party applications are unable to use the Roboto or Montserrat fonts, use the following fallback fonts. If none of the alternative font options are available, it is recommended to use the default font provided by the platform or system.
 
 <p>
   <span class="uqds-font uqds-font--arial">Arial</span>: For headings and
@@ -92,245 +64,3 @@ When platforms and systems such as third party applications are not able to disp
   <span class="uqds-font uqds-font--georgia uqds-font--italic">Georgia</span>:
   For blockquotes and testimonials
 </p>
-
-## Sizes
-
-We use 16px as the base font size and use it to calculate the other font sizes.
-
-<table className="uqds-table uqds-table--card">
-  <thead>
-    <tr>
-      <th>PX</th>
-      <th>REM</th>
-      <th>SASS variable</th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <tr>
-      <td>12</td>
-      <td>0.75</td>
-      <td><code>$font-size-xs</code></td>
-    </tr>
-
-    <tr>
-      <td>14</td>
-      <td>0.875</td>
-      <td><code>$font-size-s</code></td>
-    </tr>
-
-    <tr>
-      <td>16</td>
-      <td>1</td>
-      <td><code>$font-size-m</code></td>
-    </tr>
-
-    <tr>
-      <td>18</td>
-      <td>1.125</td>
-      <td><code>$font-size-l</code></td>
-    </tr>
-
-    <tr>
-      <td>20</td>
-      <td>1.25</td>
-      <td><code>$font-size-xl</code></td>
-    </tr>
-
-    <tr>
-      <td>24</td>
-      <td>1.5</td>
-      <td><code>$font-size-xxl</code></td>
-    </tr>
-
-    <tr>
-      <td>32</td>
-      <td>2</td>
-      <td><code>$font-size-xxxl</code></td>
-    </tr>
-
-    <tr>
-      <td>40</td>
-      <td>2.5</td>
-      <td><code>$font-size-xxxxl</code></td>
-    </tr>
-
-    <tr>
-      <td>48</td>
-      <td>3</td>
-      <td><code>$font-size-ul</code></td>
-    </tr>
-
-  </tbody>
-</table>
-
-## Styles
-
-The following typography styles are setup in HTML elements and components. Please reference the styles below when configuring new websites and components. For detailed documentation about writing style at UQ, reference the <a href="https://marketing-communication.uq.edu.au/written-style-guide" target="_blank" rel="nofollow noopener noreferrer" class="sbdocs sbdocs-a css-19nbuh3">written style guide</a>.
-
-<table className="uqds-table uqds-table--card">
-  <thead>
-    <tr className="uqds-table__mobile-heading">
-      <th className="uqds-table__heading">Element</th>
-      <th className="uqds-table__heading">Font</th>
-      <th className="uqds-table__heading">Weight</th>
-      <th className="uqds-table__heading">Size</th>
-      <th className="uqds-table__heading">Line-height</th>
-      <th className="uqds-table__heading">Colour</th>
-      <th className="uqds-table__heading">Example</th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <tr className="uqds-table__row">
-      <td className="uqds-table__item">H1</td>
-      <td className="uqds-table__item" data-title="Font:">Montserrat</td>
-      <td className="uqds-table__item" data-title="Weight:">Medium, 500</td>
-      <td className="uqds-table__item" data-title="Size:">$font-size-xxxxl</td>
-      <td className="uqds-table__item" data-title="Line-height:">1.2</td> 
-      <td className="uqds-table__item" data-title="Colour:">$grey-900</td>
-      <td className="uqds-table__item" data-title="Example"><h1>This is a H1 heading</h1></td> 
-    </tr>
-
-    <tr className="uqds-table__row">
-      <td className="uqds-table__item">H2</td>
-      <td className="uqds-table__item" data-title="Font:">Roboto</td>
-      <td className="uqds-table__item" data-title="Weight:">Medium, 500</td>
-      <td className="uqds-table__item" data-title="Size:">$font-size-xxxl</td>
-      <td className="uqds-table__item" data-title="Line-height:">1.2</td>
-      <td className="uqds-table__item" data-title="Colour:">$grey-900</td>
-      <td className="uqds-table__item" data-title="Example"><h2>This is a H2 heading</h2></td>
-    </tr>
-
-    <tr className="uqds-table__row">
-      <td className="uqds-table__item">H3</td>
-      <td className="uqds-table__item" data-title="Font:">Roboto</td>
-      <td className="uqds-table__item" data-title="Weight:">Medium, 500</td>
-      <td className="uqds-table__item" data-title="Size:">$font-size-xxl</td>
-      <td className="uqds-table__item" data-title="Line-height:">1.2</td>
-      <td className="uqds-table__item" data-title="Colour:">$grey-900</td>
-      <td className="uqds-table__item" data-title="Example"><h3>This is a H3 heading</h3></td>
-    </tr>
-
-    <tr className="uqds-table__row">
-      <td className="uqds-table__item">H4</td>
-      <td className="uqds-table__item" data-title="Font:">Roboto</td>
-      <td className="uqds-table__item" data-title="Weight:">Medium, 500</td>
-      <td className="uqds-table__item" data-title="Size:">$font-size-xl</td>
-      <td className="uqds-table__item" data-title="Line-height:">1.2</td>
-      <td className="uqds-table__item" data-title="Colour:">$grey-900</td>
-      <td className="uqds-table__item" data-title="Example"><h4>This is a H4 heading</h4></td>
-    </tr>
-
-    <tr className="uqds-table__row">
-      <td className="uqds-table__item">H5</td>
-      <td className="uqds-table__item" data-title="Font:">Roboto</td>
-      <td className="uqds-table__item" data-title="Weight:">Medium, 500</td>
-      <td className="uqds-table__item" data-title="Size:">$font-size-l</td>
-      <td className="uqds-table__item" data-title="Line-height:">1.2</td>
-      <td className="uqds-table__item" data-title="Colour:">$grey-900</td>
-      <td className="uqds-table__item" data-title="Example"><h5>This is a H5 heading</h5></td>
-    </tr>
-
-    <tr className="uqds-table__row">
-      <td className="uqds-table__item">H6</td>
-      <td className="uqds-table__item" data-title="Font:">Roboto</td>
-      <td className="uqds-table__item" data-title="Weight:">Medium, 500</td>
-      <td className="uqds-table__item" data-title="Size:">$font-size-m</td>
-      <td className="uqds-table__item" data-title="Line-height:">1.2</td>
-      <td className="uqds-table__item" data-title="Colour:">$grey-900</td>
-      <td className="uqds-table__item" data-title="Example"><h6>This is a H6 heading</h6></td>
-    </tr>
-
-    <tr className="uqds-table__row">
-      <td className="uqds-table__item">Lead</td>
-      <td className="uqds-table__item" data-title="Font:">Roboto</td>
-      <td className="uqds-table__item" data-title="Weight:">Regular, 400</td>
-      <td className="uqds-table__item" data-title="Size:">$font-size-l</td>
-      <td className="uqds-table__item" data-title="Line-height:">1.5</td>
-      <td className="uqds-table__item" data-title="Colour:">$grey-900</td>
-      <td className="uqds-table__item" data-title="Example"><p class="uqds-font--lead">This is lead paragraph text</p></td>
-    </tr>
-
-    <tr className="uqds-table__row">
-      <td className="uqds-table__item">Paragraph</td>
-      <td className="uqds-table__item" data-title="Font:">Roboto</td>
-      <td className="uqds-table__item" data-title="Weight:">Regular, 400</td>
-      <td className="uqds-table__item" data-title="Size:">$font-size-m</td>
-      <td className="uqds-table__item" data-title="Line-height:">1.5</td>
-      <td className="uqds-table__item" data-title="Colour:">$grey-900</td>
-      <td className="uqds-table__item" data-title="Example"><p>This is paragraph text</p></td>
-    </tr>
-
-    <tr className="uqds-table__row">
-      <td className="uqds-table__item">Paragraph small</td>
-      <td className="uqds-table__item" data-title="Font:">Roboto</td>
-      <td className="uqds-table__item" data-title="Weight:">Regular, 400</td>
-      <td className="uqds-table__item" data-title="Size:">$font-size-s</td>
-      <td className="uqds-table__item" data-title="Line-height:">1.5</td>
-      <td className="uqds-table__item" data-title="Colour:">$grey-900</td>
-      <td className="uqds-table__item" data-title="Example"><p class="uqds-font--small">This is small paragraph text</p></td>
-    </tr>
-
-    <tr className="uqds-table__row">
-      <td className="uqds-table__item">Paragraph xsmall</td>
-      <td className="uqds-table__item" data-title="Font:">Roboto</td>
-      <td className="uqds-table__item" data-title="Weight:">Regular, 400</td>
-      <td className="uqds-table__item" data-title="Size:">$font-size-xs</td>
-      <td className="uqds-table__item" data-title="Line-height:">1.5</td>
-      <td className="uqds-table__item" data-title="Colour:">$grey-900</td>
-      <td className="uqds-table__item" data-title="Example"><p class="uqds-font--xsmall">This is extra small paragraph text</p></td>
-    </tr>
-
-    <tr className="uqds-table__row">
-      <td className="uqds-table__item">Link</td>
-      <td className="uqds-table__item" data-title="Font:">Roboto</td>
-      <td className="uqds-table__item" data-title="Weight:">Medium, 500</td>
-      <td className="uqds-table__item" data-title="Size:">$font-size-m</td>
-      <td className="uqds-table__item" data-title="Line-height:">1.5</td>
-      <td className="uqds-table__item" data-title="Colour:">$purple-500</td>
-      <td className="uqds-table__item" data-title="Example"><a href="">This is a link</a></td>
-    </tr>
-
-    <tr className="uqds-table__row">
-      <td className="uqds-table__item">Ordered list</td>
-      <td className="uqds-table__item" data-title="Font:">Roboto</td>
-      <td className="uqds-table__item" data-title="Weight:">Regular, 400</td>
-      <td className="uqds-table__item" data-title="Size:">$font-size-m</td>
-      <td className="uqds-table__item" data-title="Line-height:">1.5</td>
-      <td className="uqds-table__item" data-title="Colour:">$grey-900</td>
-      <td className="uqds-table__item" data-title="Example"><ol><li>This is an ordered list item</li></ol></td>
-    </tr>
-
-    <tr className="uqds-table__row">
-      <td className="uqds-table__item">Unordered list</td>
-      <td className="uqds-table__item" data-title="Font:">Roboto</td>
-      <td className="uqds-table__item" data-title="Weight:">Regular, 400</td>
-      <td className="uqds-table__item" data-title="Size:">$font-size-m</td>
-      <td className="uqds-table__item" data-title="Line-height:">1.5</td>
-      <td className="uqds-table__item" data-title="Colour:">$grey-900</td>
-      <td className="uqds-table__item" data-title="Example"><ul><li>This is an unordered list item</li></ul></td>
-    </tr>
-
-    <tr className="uqds-table__row">
-      <td className="uqds-table__item">Label</td>
-      <td className="uqds-table__item" data-title="Font:">Roboto</td>
-      <td className="uqds-table__item" data-title="Weight:">Regular, 400</td>
-      <td className="uqds-table__item" data-title="Size:">$font-size-s</td>
-      <td className="uqds-table__item" data-title="Line-height:">1.5</td>
-      <td className="uqds-table__item" data-title="Colour:">$grey-900</td>
-      <td className="uqds-table__item" data-title="Example"><label>This is a label</label></td>
-    </tr>
-
-    <tr className="uqds-table__row">
-      <td className="uqds-table__item">Blockquote</td>
-      <td className="uqds-table__item" data-title="Font:">Roboto</td>
-      <td className="uqds-table__item" data-title="Weight:">Regular, 400</td>
-      <td className="uqds-table__item" data-title="Size:">$font-size-l</td>
-      <td className="uqds-table__item" data-title="Line-height:">1.5</td>
-      <td className="uqds-table__item" data-title="Colour:">$grey-900</td>
-      <td className="uqds-table__item" data-title="Example"><blockquote>This is a blockquote</blockquote></td>
-    </tr>
-
-  </tbody>
-</table>
