Added additional Email templates

--- a/packages/storybook-email/stories/newsletter/salesforce/salesforce.mdx
+++ b/packages/storybook-email/stories/newsletter/salesforce/salesforce.mdx
@@ -4,7 +4,7 @@ import * as SalesforceStories from "./salesforce.stories";
 
 <Meta of={SalesforceStories} />
 
-# Newsletter
+# Salesforce Newsletter
 
 The `.uq-container` component provides the **page container** by:
 
