--- a/packages/storybook-email/stories/templates/vision6/vision6.mdx
+++ b/packages/storybook-email/stories/templates/vision6/vision6.mdx
@@ -4,7 +4,7 @@ import * as Vision6Stories from "./vision6.stories";
 
 <Meta of={Vision6Stories} />
 
-# Vision 6 Newsletter
+# Vision 6 Template
 
 The `.uq-container` component provides the **page container** by:
 
